# embd

./: Cargo.toml  README.md  run.sh
.cargo/: config.toml
src/: imu.rs  lib.rs  main.rs  register.rs  types.rs
src/imu/: mpu6050.rs
